package com.mhm.struct.decorator;

/**
 * 抽象构件
 * @author MHm
 * @date 2020-4-19 13:52
 */
public abstract class DecoratorComponent {
    public abstract void opreate();
}
